<resources>
    <string name="app_name">My Chef</string>
    <string name="splash_background">Splash background</string>
    <string name="logo">logo</string>
    <string name="my_chef">My Chef</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_login">Please enter your email</string>
    <string name="login_subheader">Please sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_to_your_account">Login to your account.</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="google_logo">google logo</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="create_an_account_to_start_looking_for_the_food_you_like">Create an account to start looking for the food you like</string>
    <string name="username">User Name</string>
    <string name="or_register_with">or register with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="default_web_client_id">139553519143-sfoarscmpkv6559htl5eqrdbdp9einpn.apps.googleusercontent.com</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="mealphoto">Meal Photo</string>
    <string name="daily_chosen_meal">Daily Chosen Meal</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="profile_image">Profile Image</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="meal_image">Meal Image</string>
    <string name="details_meal_name">details Meal Name</string>
    <string name="recipe">RECIPE</string>
    <string name="category_Area">Category, Area</string>
    <string name="place_holder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="account">Account</string>
    <string name="plan">Plan</string>
    <string name="fav">Fav</string>
    <string name="categoryimage">Category Image</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="search_by_meal">Search by meal</string>
    <string name="save_meal">Save meal</string>
    <string name="to_plan">To Plan</string>
    <string name="your_plan">Your Plan :</string>
    <string name="remove">Remove</string>
    <string name="favorite_list">Favorite list :</string>
    <string name="my_food_preferences">My Food Preferences</string>
    <string name="diet_preferences_allergies_and_meal_plan_settings">Diet Preferences, Allergies, and Meal Plan settings.</string>
    <string name="edit_your_profile">EDIT YOUR PROFILE</string>
    <string name="guest">Guest</string>
    <string name="about_mychef">About MyChef</string>
    <string name="general_settings">General Settings</string>
    <string name="skip">Skip</string>
    <string name="meal">Meal :</string>
</resources>