<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item
        android:id="@+id/loginFragment"
        android:enabled="true"
        android:icon="@drawable/calendar"
        android:title="@string/plan"/>
    <item
        android:id="@id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/bookmark"
        android:title="@string/fav"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/account"/>


</menu>