<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/primary"
tools:context=".ui.profile.views.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/userName"
        app:layout_constraintBottom_toBottomOf="@id/editProfile"
        android:layout_marginEnd="20dp">
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/baseline_account_circle_24"
            android:scaleType="centerCrop"

            android:background="@color/white"/>

    </androidx.cardview.widget.CardView>

<TextView
    android:id="@+id/userName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/guest"
    android:textSize="24sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="30dp"
    android:layout_marginStart="20dp"/>

<TextView
    android:id="@+id/editProfile"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/edit_your_profile"
    android:textSize="14sp"
    android:textColor="@color/second_secondary"
    android:textStyle="italic"
    app:layout_constraintStart_toStartOf="@id/userName"
    app:layout_constraintTop_toBottomOf="@id/userName"
    android:layout_marginTop="4dp" />

<androidx.cardview.widget.CardView
    android:id="@+id/foodPreferencesCard"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="80dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/second_primary"
    app:cardCornerRadius="10dp"
    app:layout_constraintTop_toBottomOf="@id/editProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/second_primary">

        <TextView
            android:id="@+id/foodPreferencesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_food_preferences"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/foodPreferencesSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet_preferences_allergies_and_meal_plan_settings"
            android:textSize="14sp"
            android:textColor="@color/second_secondary"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/foodPreferencesCard"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:backgroundTint="@color/primary"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="80dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:id="@+id/menuItemsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/foodPreferencesCard"
        android:background="@color/second_primary"
        >

        <TextView
            android:id="@+id/generalSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_settings"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/second_secondary"/>

        <TextView
            android:id="@+id/aboutSideChef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_mychef"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/second_secondary"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="16sp"
            android:textColor="@color/second_secondary"
            android:padding="12dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
