<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/loginHeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/loginSubHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subheader"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/loginHeaderText" />

    <TextView
        android:id="@+id/loginEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="128dp"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/loginSubHeaderText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:boxBackgroundMode="outline"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/loginEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/email_address_text_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/loginPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_background"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/primary"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/login_password_text_field" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/or_sign_in"
        app:layout_constraintEnd_toStartOf="@id/or_sign_in"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintTop_toTopOf="@id/or_sign_in" />

    <!-- Text -->
    <TextView
        android:id="@+id/or_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="8dp"
        android:text="@string/or_sign_in_with"
        android:textColor="#888888"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <!-- Right Line -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/or_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/or_sign_in"
        app:layout_constraintTop_toTopOf="@id/or_sign_in" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/google_action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-35dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/google_logo"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/or_sign_in"
        app:layout_constraintTop_toBottomOf="@id/or_sign_in"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/google"
        app:tint="@null"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/facebook_action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/google_logo"
        app:backgroundTint="@color/white"
        app:fabSize="normal"
        app:layout_constraintEnd_toStartOf="@id/google_action_btn"
        app:layout_constraintTop_toBottomOf="@id/or_sign_in"
        app:rippleColor="@color/primary"
        app:srcCompat="@drawable/facebook"
        app:tint="@null" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/register_text"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/facebook_action_btn"
        android:layout_marginStart="42dp"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/sign_up_text"
        app:layout_constraintTop_toBottomOf="@id/facebook_action_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>