<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.MealDetailsFragment"
    android:scrollbars="none"
    android:background="@color/primary">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/detailsImg"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/meal_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/backgroundpizza"
        android:scaleType="centerCrop"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/detailsCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/detailsImg"
        app:layout_constraintBottom_toBottomOf="@id/detailsImg"
        android:backgroundTint="@color/second_primary"
        app:layout_constraintStart_toStartOf="@id/detailsImg"
        app:layout_constraintEnd_toEndOf="@id/detailsImg"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/detailsMealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_meal_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:layout_marginTop="-30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_Area"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/detailsMealName"
                app:layout_constraintEnd_toEndOf="@id/detailsMealName"
                app:layout_constraintTop_toBottomOf="@id/detailsMealName"
                android:layout_marginTop="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
<WebView
    android:id="@+id/mealVideo"
    android:layout_width="370dp"
    android:layout_height="250dp"
    app:layout_constraintTop_toBottomOf="@id/detailsCard"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/mealInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealVideo"
        android:text="@string/place_holder"
        android:textSize="16sp"
        android:textColor="@color/second_secondary"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>